# my_linker

./: .gitmodules  Cargo.toml  flake.nix
elf/: Cargo.toml
elf/src/: abi.rs  lib.rs  read.rs  write.rs  x86_64.rs
runtime/linux_x86_64_newlib/: Makefile  _exit.c  close.c  crt0.s  fstat.c  getentropy.c  getpid.c  gettimeofday.c  isatty.c  kill.c  link.c  linux_stat.h  linux_syscall.h  lseek.c  mkdir.c  open.c  read.c  rename.c  sbrk.c  shim.c  stat.c  times.c  unlink.c  write.c
src/: archive.rs  archive_index.rs  debug.rs  input_id.rs  input_symbol.rs  link.rs  main.rs  open.rs  parse.rs  relocate.rs  resolve.rs  script.rs  test_utils.rs  write.rs
tests/: cli_smoke.rs  link_failures.rs  link_success.rs
tests/common/: toolchain.rs
