[package]
name = "my_linker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
anyhow = "1.0.102"
memmap2 = "0.9.10"
rayon = "1.11.0"
elf = { path = "./elf" }
num = "0.4.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
